<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.go4lunch.ViewModel.fragments.mapViewFragment"
        android:label="@string/title_MapView"
        tools:layout="@layout/fragment_list_view" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.go4lunch.ViewModel.fragments.listViewFragment"
        android:label="@string/title_ListView"
        tools:layout="@layout/fragment_map_view" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.go4lunch.ViewModel.fragments.workmatesFragment"
        android:label="@string/title_Workmates"
        tools:layout="@layout/fragment_workmates" />
</navigation>
