<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buffet2"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize" >

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="180dip"
        android:layout_height="180dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/meal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="55sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/subtitle_main_activity"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/ConnexionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        style="?android:attr/borderlessButtonStyle"
        android:layout_margin="100dp"
        android:padding="15dp"/>

</LinearLayout>